# cbc-by-similarity

./: .gitignore  README.md  birds_and_cluster_indices-byPartyHour.csv  birds_and_cluster_indices-howMany.csv  main.py  pyproject.toml
data/processed/: bci_cbc-by_party_hours.csv  bci_cbc-how_many.csv  bci_hotspot-abundance.csv  bird_map.csv  cbc-bird-comparisons_howMany-over-100_cosine.tsv  cbc-bird-comparisons_howMany_hausdorff.tsv  cbc-bird-comparisons_numberByPartyHours-over-100_cosine.tsv  cbc-bird-comparisons_numberByPartyHours_hausdorff.tsv  hotspot_L199454_trimmed.tsv
data/raw/: bird_map_as_json.json  test_csv.csv
data/raw/cbc/: bird_map_as_json.json
data/raw/hotspot/: ebird_L199454__1980_2025_1_12_barchart.txt
public/: index.html
public/js/: index.js
src/: BirdData.py  app_types.py  calculations.py  cbc-notebook.ipynb  file_writing.py  hotspot-notebook.ipynb  main.py  plotters.py  timeserieskmeans_over_dataframes.py  transform_helpers.py
typings/matplotlib/: pyplot.pyi
typings/tslearn/: __init__.pyi
typings/tslearn/backend/: __init__.pyi  backend.pyi  numpy_backend.pyi  pytorch_backend.pyi
typings/tslearn/barycenters/: __init__.pyi  dba.pyi  euclidean.pyi  softdtw.pyi
typings/tslearn/bases/: __init__.pyi  bases.pyi
typings/tslearn/clustering/: __init__.pyi  kmeans.pyi  kshape.pyi  utils.pyi
typings/tslearn/hdftools/: __init__.pyi  hdftools.pyi
typings/tslearn/metrics/: __init__.pyi  ctw.pyi  cycc.pyi  cysax.pyi  dtw_variants.pyi  sax.pyi  soft_dtw_fast.pyi  soft_dtw_loss_pytorch.pyi  softdtw_variants.pyi
(+5 files in other folders)
